# practical-cryptoanalysis

./: .gitignore  README.md
exercises and projects/: .gitignore  .~lock.md5_graph.txt#  CMakeLists.txt  md5_graph.xlsb  md5_graph_rainbow.txt  md5_graph_rainbow.xlsb  rainbow_table.txt  ~$md5_graph_rainbow.xlsb
exercises and projects/src/: entropy.py  main.cpp  mitm.cpp
exercises and projects/src/exercise0/: Encrypter.cpp  Encrypter.h  encrypt.cpp  encrypt.h  main.cpp
exercises and projects/src/lib/: Encrypter.cpp  Encrypter.h  mitm.c
exercises and projects/src/sheet0/: Encrypter.cpp  Encrypter.h  main.cpp
exercises and projects/src/sheet1/: main.cpp
